blazor-error-ui

--- a/Blazor/wwwroot/index.html
+++ b/Blazor/wwwroot/index.html
@@ -8,6 +8,7 @@
     />
     <title>Blazor</title>
     <base href="/" />
+    <link href="css/app.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -16,6 +17,7 @@
     <div id="blazor-error-ui">
       An unhandled error has occurred.
       <a href="">Reload</a>
+      <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
   </body>
