--- a/Blazor/wwwroot/index.html
+++ b/Blazor/wwwroot/index.html
@@ -9,6 +9,10 @@
     <title>Blazor</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
+    <link
+      href="_content/AntDesign/css/ant-design-blazor.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -20,5 +24,6 @@
       <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
   </body>
 </html>
